--- a/src/components/Contact/index.scss
+++ b/src/components/Contact/index.scss
@@ -221,9 +221,8 @@ align-items: center;
         justify-content: center;
         column-gap: 6rem;
         padding-bottom: 3rem;
-        padding-top: 502%;
-      left: 14vh;
-      }
+        padding-top: 250vh;
+right: 2vh;      }
 
         
         
