--- a/src/components/Home/Logo/index.scss
+++ b/src/components/Home/Logo/index.scss
@@ -2,24 +2,14 @@
   z-index: 0;
   width: 53vh;
   height: 78vh;
-  opacity: 0;
+  opacity: 1;
   position: absolute;
   top: 53vh;
   right: 15%;
   bottom: 0;
   left: auto;
   margin: auto;
-  
-
-  svg {
-    width: 100%;
-    height:95%;
-    bottom: 0;
-    transform: rotateZ(30deg) !important;
-    padding-right: 90.1vh;
-    padding-left: 10.6vh;
-    
-  }
+  animation: fadeIn 8s;
 
   .solid-logo {
     position: absolute;
@@ -29,7 +19,7 @@
     left: 0;
     margin: auto;
     width:90%;
-    opacity: 0;
+    opacity: 1;
     transform: rotateZ(30deg) !important;
     z-index: 1;
     padding-left:12.19vh;
@@ -37,35 +27,28 @@
   }
 }
 
-.svg-container {
-  stroke: #000000;
-  stroke-width: 100;
-  
+
+@keyframes fadeIn {
+  0% { opacity: 0; }
+  100% { opacity: 1; }
 }
+
+
+
 @media screen and (max-width: 768px){
   .logo-container {
     z-index: 0;
     width: 52%;
     height: 60%;
-    opacity: 0;
+    opacity: 1;
     position: absolute;
-    top: 10vh;
+    top: 20vh;
     right: 20%;
     bottom: 0;
     left: 32%;
     margin: auto;
     
   
-    svg {
-      width: 200%;
-      height:200%;
-      bottom: 0;
-      transform: rotateZ(30deg) !important;
-      padding-right: 69%;
-      padding-left: 7%;
-    
-      
-    }
   
     .solid-logo {
       position: absolute;
@@ -74,8 +57,8 @@
       bottom: auto;
       left: 0;
       margin: auto;
-      width:90%;
-      opacity: 0;
+      width:70%;
+      opacity: 1;
       transform: rotateZ(30deg) !important;
       z-index: 1;
       padding-left:12.19vh;
@@ -91,10 +74,9 @@
 
 @media screen and (max-width: 576px){
   .logo-container {
-    z-index: 0;
     width: 60%;
     height: 70%;
-    opacity: 0;
+    opacity: 1;
     position: absolute;
     top: 16vh;
     right: 20%;
@@ -103,14 +85,6 @@
     margin: auto;
     
   
-    svg {
-      width: 200%;
-      height:200%;
-      bottom: 0;
-      transform: rotateZ(30deg) !important;
-      padding-right: 120%;
-      
-    }
   
     .solid-logo {
       position: absolute;
@@ -120,10 +94,11 @@
       left: 0;
       margin: auto;
       width:107%;
-      opacity: 0;
+      opacity: 1;
       transform: rotateZ(30deg) !important;
       z-index: 1;
       padding-left:16.19vh;
+
     }
   }
   
@@ -142,29 +117,21 @@
     z-index: 0;
     width: 60%;
     height: 70%;
-    opacity: 0;
+    opacity: 1;
     position: absolute;
 
     
   
-    svg {
-      width: 160%;
-      height:100%;
-      bottom: 0;
-      transform: rotateZ(30deg) !important;
-      padding-right: 420%;
-      
-    }
-  
+   
     .solid-logo {
       position: absolute;
-      top: -20%;
-      right: auto;
+      top: 1%;
+      right: 20vh;
       bottom: auto;
       left: 0;
       margin: auto;
-      width:150%;
-      opacity: 0;
+      width:80%;
+      opacity: 1;
       transform: rotateZ(30deg) !important;
       z-index: 1;
       padding-left:4.19vh;
@@ -172,11 +139,7 @@
     }
   }
   
-  .svg-container {
-    stroke: #000000;
-    stroke-width: 100;
-  
-  }
+
 
 
 }
