--- a/src/components/About/index.scss
+++ b/src/components/About/index.scss
@@ -223,26 +223,49 @@ transform: translateX(0);
 
       #text-zone2{
         margin: 3%;
-        margin-top: 65vh;
-        margin-left: 31vh;
+        margin-top: 45vh;
+        margin-left: 6vh;
         font-size: 12vh;
       }
 
       .stage-cube-cont {
-        width: 50%;
+        width: 100%;
         height:40%;
         top: 0;
         padding-top: 88%;
-        margin-left: 0;
         position: absolute;
         right: -5vh;
         overflow: hidden;
-        margin-top: 123%;
-        
+        margin-top: 110vh;
+        right: 2vh;
       
       }
 
+      .text-zone3{
+        padding-left: 30%;
+        margin-top: 25%;
+        width: 400px;
+        margin-right: 800px;
+    
+      }
+
+
     }
+    @media screen and (max-width: 460px){
+      .stage-cube-cont {
+        width: 100%;
+        height:40%;
+        top: 0;
+        padding-top: 88%;
+        position: absolute;
+        right: -5vh;
+        overflow: hidden;
+        margin-top: 120vh;
+        right: 2vh;
+      
+      }
+    }
+
     @media screen and (max-width: 415px){
      
      
@@ -275,7 +298,7 @@ transform: translateX(0);
             position: absolute;
             left: 18vh;
             overflow: hidden;
-            margin-top: 150vh;
+            margin-top: 180vh;
             
           
           }
