--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,7 @@ height: 100%;
 
 @media screen and (max-width: 1200px) {
   body {
-    overflow: visible;
+    overflow: hidden;
   }
 }
 
@@ -44,6 +44,54 @@ height: 100%;
   height: 100%;
     scroll-snap-type: y mandatory ;
    max-width: 768px;
-   overflow-x: hidden;
+   overflow-x:hidden;
+  }
+}
+@media screen and (max-width: 576px) {
+  body {
+    margin: 0;
+    font: 300 11px/1.4 'Coolvetica';
+    color: #8b8b8b;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    background: #FBFAF5;
+    display: flex;
+    min-height: 100vh;
+  height: 100%;
+    scroll-snap-type: y mandatory ;
+   max-width: 575px;
+   overflow-x:hidden;
+  }
+}
+@media screen and (max-width: 460px) {
+  body {
+    margin: 0;
+    font: 300 11px/1.4 'Coolvetica';
+    color: #8b8b8b;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    background: #FBFAF5;
+    display: flex;
+    min-height: 100vh;
+  height: 100%;
+    scroll-snap-type: y mandatory ;
+   max-width: 459px;
+   overflow-x:hidden;
+  }
+}
+@media screen and (max-width: 415px) {
+  body {
+    margin: 0;
+    font: 300 11px/1.4 'Coolvetica';
+    color: #8b8b8b;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    background: #FBFAF5;
+    display: flex;
+    min-height: 100vh;
+  height: 100%;
+    scroll-snap-type: y mandatory ;
+   max-width: 414px;
+   overflow-x:hidden;
   }
 }
